--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "startserver": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^112.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
